Переделка сервера в рамках нового формата. Заложил каркас. Далее требуется реализовать непосредственно каждый UseCase.

--- a/server.properties
+++ b/server.properties
@@ -1,7 +1,5 @@
 SERVER_PORT=8031
-SERVER_CRYPTO_API_PORT=8032
 DB_NAME=chat
-DB_USER_ROOT=server
-DB_PASSWORD_ROOT=server
-ENCRYPTION_ENABLED=false
+DB_USER=server
+DB_PASSWORD=server
 LOGGER_ENABLED=true
