1)Поменял структуру слоя data 2)Подключил БД PostgreSQL 3)Начал делать регистрацию

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 SERVER_PORT=8031
-DB_NAME=chat
-DB_USER=server
-DB_PASSWORD=server
+DB_NAME=auth_db
+DB_USER=auth_server_papi
+DB_PASSWORD=auth_server_papi
 LOGGER_ENABLED=true
