--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile files('libs/bcprov-jdk15on-159.jar')
 }
 
 sourceCompatibility = "1.8"
