Разделение конфига сервера для Public & Service APIs

--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,6 @@
-SERVER_PORT=8031
+PAPI_SERVER_PORT=8031
+SAPI_SERVER_PORT=8032
 DB_NAME=auth_db
-DB_USER=auth_server_papi
-DB_PASSWORD=auth_server_papi
+DB_USER=auth_server
+DB_PASSWORD=auth_server
 LOGGER_ENABLED=true
